# rickandmorty-api

./: Dockerfile  README.md  architecture.md  main.py  openapi.json  pyproject.toml
.github/workflows/: ci-cd.yml
helm/: Chart.yaml  values-production.yaml
helm/rickandmorty-api/: ci-deploy-job.yaml  values.yaml
helm/rickandmorty-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  external-secret.yaml  hpa.yaml  rbac.yaml  secret-store.yaml  secret.yaml
helm/rickandmorty-api/templates/tests/: test-connection.yaml
helm/templates/: configmap.yaml  deployment.yaml  httproute.yaml  ingress.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
monitoring/grafana/dashboards/: rickandmorty-api-dashboard.json  rickandmorty-cluster-dashboard.json
monitoring/prometheus/: alertmanager-config.yaml  rules.yaml  servicemonitor.yaml
tests/integration/: test_api.py
tests/unit/: test_main.py
