[project]
name = "rickandmorty-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "requests>=2.32",
    "asyncpg>=0.29",
    "pyrate-limiter>=3.6",
    "fastapi-limiter>=0.1.6",
    "pyyaml>=6.0",
    "types-requests>=2.32.4.20260107",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # required by FastAPI TestClient
    # Linting / formatting
    "ruff>=0.4",
    # Type checking
    "mypy>=1.10",
    # Security
    "bandit>=1.7",
    "pip-audit>=2.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # handled by formatter

[tool.mypy]
python_version = "3.12"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101", "B608", "B104"]
